# binary-matching-engine

./: .gitignore  CMakeLists.txt  README.md  bench.cpp  benchmarks_temp.md  fuzz.cpp
docs/: index.html
include/engine/: order_book.hpp  reference_book.hpp  types.hpp
src/: order_book.cpp  server.cpp
